--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1>Hello World, we are software developers!</h1>
+    <header id="header">
+      <img src="./assets/download.jpg" id="header-img">
+      <nav id="nav-bar">
+        <p class="nav-link">coffee</p>
+        <p class="nav-link">Tea</p>
+        <p class="nav-link">Cocoa</p>
+      </nav>
+      
+    </header>
+    
 
   </body>
 </html>
