added files to html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,59 @@
         <iframe height="315" id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
+    <div class="pricing">
+      <div class="product" id="product1">
+        <div class="tenor">Tenor Trombone</div>
+        <h2>Ksh 30000</h2>
+        <ol>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+        </ol>
+        <button class="btn">Select</button>
+      </div>
+    </div>
+    <div class="pricing">
+      <div class="product" id="product1">
+        <div class="tenor">Bass Trombone</div>
+        <h2>Ksh 80000</h2>
+        <ol>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+        </ol>
+        <button class="btn">Select</button>
+      </div>
+    </div>
+    <div class="pricing">
+      <div class="product" id="product1">
+        <div class="tenor">sop Trombone</div>
+        <h2>Ksh 1000</h2>
+        <ol>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+          <li>Lorem ipsum</li>
+        </ol>
+        <button class="btn">Select</button>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>
+          <a href="#">Privacy</a>
+        </li>
+        <li>
+          <a href="#">Terms</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+      <span>Copyright @Edithoga-Joshuaeze 2022 applicants</span>
+    </footer>
     
 
   </body>
