--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="./assets/download.jpg" id="header-img">
       <nav id="nav-bar">
         <a href="#features" class="nav-link">features</a>
-        <a href="#video" class="nav-link">how it works</a>
+        <a href="#video-section" class="nav-link">how it works</a>
         <a href="#pricing" class="nav-link">pricing</a>
       </nav>
     </header>
